// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with more adults 1`] = `
<Text>
  <Translation
    id="HotelsSearch.Guests.Adults"
  />
  <DummyTranslation
    id=" 5"
  />
  <Text
    style={
      Object {
        "color": "#bdbdbd",
      }
    }
  >
    <DummyTranslation
      id=" ⋅ "
    />
    <Translation
      id="HotelsSearch.Guests.Children"
    />
    <DummyTranslation
      id=" 0"
    />
  </Text>
</Text>
`;

exports[`renders correctly with more adults and children 1`] = `
<Text>
  <Translation
    id="HotelsSearch.Guests.Adults"
  />
  <DummyTranslation
    id=" 5"
  />
  <Text
    style={
      Object {
        "color": "#bdbdbd",
      }
    }
  >
    <DummyTranslation
      id=" ⋅ "
    />
    <Translation
      id="HotelsSearch.Guests.Children"
    />
    <DummyTranslation
      id=" 3"
    />
  </Text>
</Text>
`;

exports[`renders correctly with one adult and zero children 1`] = `
<Text>
  <Translation
    id="HotelsSearch.Guests.Adults"
  />
  <DummyTranslation
    id=" 1"
  />
  <Text
    style={
      Object {
        "color": "#bdbdbd",
      }
    }
  >
    <DummyTranslation
      id=" ⋅ "
    />
    <Translation
      id="HotelsSearch.Guests.Children"
    />
    <DummyTranslation
      id=" 0"
    />
  </Text>
</Text>
`;

exports[`renders correctly with one child and zero adults 1`] = `
<Text>
  <Translation
    id="HotelsSearch.Guests.Adults"
  />
  <DummyTranslation
    id=" 0"
  />
  <Text
    style={
      Object {
        "color": "#bdbdbd",
      }
    }
  >
    <DummyTranslation
      id=" ⋅ "
    />
    <Translation
      id="HotelsSearch.Guests.Children"
    />
    <DummyTranslation
      id=" 1"
    />
  </Text>
</Text>
`;
